# cgbot

./: Cargo.toml  TODO  build.rs
src/: bounds_detector.rs  debug.rs  lib.rs  maps.rs  meta_strategy.rs  pathfinding.rs  rewind_client.rs  simulation.rs  strategy.rs  tracker.rs  vec2.rs  world.rs
